Add Docker support with entrypoint script and update dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
         working_dir: /app
         volumes:
             - ./strapi-cms:/app
-        command: npm run develop
+        command:  sh -c "npm install && npm run develop"
         environment:
             - HOST=0.0.0.0
             - PORT=1337
