--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,8 @@
 parameters:
 
 services:
+    Symfony\Component\HttpFoundation\Session\SessionInterface: '@session.factory'
+
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
@@ -23,8 +25,6 @@ services:
     App\Service\DummyJsonApiService:
         arguments:
             $baseUrl: 'https://dummyjson.com'
-
-
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
