--- a/strapi-cms/package.json
+++ b/strapi-cms/package.json
@@ -18,6 +18,7 @@
     "@strapi/plugin-cloud": "5.15.0",
     "@strapi/plugin-users-permissions": "5.15.0",
     "@strapi/strapi": "5.15.0",
+    "axios": "^1.9.0",
     "better-sqlite3": "11.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
